AM_CFLAGS = -Wall -std=gnu99
bin_PROGRAMS = gematria temurah notarikon
gematria_SOURCES = processing.h processing.c gematria.h gematria.c
temurah_SOURCES = processing.h processing.c temurah.h temurah.c
notarikon_SOURCES = processing.h processing.c notarikon.c
man_MANS = doc/eng-qbl.1 doc/gematria.1 doc/temurah.1 doc/notarikon.1
EXTRA_DIST = sample-texts/bible-books.tar.gz \
			 sample-texts/bible.txt.tar.gz \
			 sample-texts/madd.txt \
			 doc
